--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -22,7 +22,7 @@ a {
 
 li {
     list-style: none;
-    color: #696969 !important;
+    color: #fff !important;
 }
 
 .btn {
@@ -66,6 +66,9 @@ b, strong {
 }
 
 header {
+
+    background-color: rgba(20, 32, 50, 0.75);
+    z-index: 10;
     &.navbar {
 
         .navbar-toggler-icon{
@@ -98,7 +101,8 @@ header {
             height: 100%;
 
             img {
-                height: 105px;
+                height: 89px;
+                padding: 10px 0;
             }
 
             @media (max-width: 576px) {
@@ -110,16 +114,18 @@ header {
 
         .navbar-collapse {
             flex-grow: initial;
-            align-self: self-end;
-            font-size: 16pt;
+            font-size: 13pt;
             color: #696969;
 
             .navbar-nav {
 
                 .nav-item {
+                    border-bottom: 1.5px solid transparent;
+
                     .nav-link {
-                        border-right: 2px solid #696969;
-                        padding: 0px 12px;
+                        border-right: 1.5px solid #fff;
+                        padding: 0px 8px;
+                        color: #fff !important;
 
                         &:hover {
                             color: #137db8;
@@ -127,16 +133,15 @@ header {
                     }
 
                     &:hover {
-                        border-bottom: 2px solid #137db8;
+                        border-bottom: 1.5px solid #137db8;
                     }
 
-                    padding-bottom: 10px;
                     .header-notify{
                         border-radius: 50%;
-                        width: 22px;
-                        height: 22px;
+                        width: 20px;
+                        height: 20px;
                         color: #fff;
-                        font-size: 14px;
+                        font-size: 15px;
                         line-height: 20px;
                         font-weight: 600;
                         display: inline-block;
@@ -145,8 +150,9 @@ header {
                     }
                 }
 
-                .nav-item:last-child .nav-link,
-                .nav-item:nth-child(4) .nav-link {
+                .nav-item:nth-child(n+9) .nav-link,
+                .nav-item:last-child .nav-link
+                {
                     border-right: none;
                 }
             }
@@ -175,13 +181,31 @@ header {
 
         }
 
+        .ask_price {
+            border: 1px solid #fff !important;
+            border-radius: 10px;
+            font-size: 12pt;
+            line-height: 16px;
+            .material-icons{
+                font-size: 20px;
+                vertical-align: text-top;
+                margin-right: 5px;
+            }
+
+            @media (max-width: 992px) {
+                border: none;
+                font-size: 16pt;
+                line-height: 16px;
+                padding: 5px;
+                margin: 10px 5px;
+            }
+        }
+
         .language_switch {
             .dropdown-toggle {
                 border-radius: 10px;
                 font-size: 13pt;
                 line-height: 13px;
-                border: 1px solid #696969;
-                padding: 5px;
                 margin: 0 10px;
                 text-decoration: none;
             }
@@ -309,6 +333,7 @@ footer {
 }
 
 main {
+    margin-top: -131px;
 
     .pill_button {
         background-color: #fff;
@@ -351,6 +376,8 @@ main {
 
             img {
                 width: 100%;
+                height: 900px;
+                object-fit: cover;
             }
         }
 
