--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -327,6 +327,20 @@ footer {
             padding: 0 10px;
         }
     }
+
+    #footer_right_shape {
+        position: absolute;
+        height: 300px;
+        width: 300px;
+        opacity: 0.2;
+        z-index: 0;
+        right: 0;
+        transform: translateY(-260px);
+        background-image: url('../assets/img/right_side_triangle.webp');
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: right bottom;
+    }
 }
 
 main {
@@ -611,7 +625,7 @@ main {
 
         #iso_quality {
             padding: 100px 0 0 0;
-            margin-bottom: 200px;
+            margin-bottom: 300px;
             font-size: 20px;
 
             h3 {
@@ -626,14 +640,14 @@ main {
             #index_left_shape {
                 position: absolute;
                 height: 900px;
-                width: 277px;
+                width: 300px;
                 opacity: 0.7;
                 z-index: 0;
                 background-image: url('../assets/img/home_left_bottom_shape.png');
                 background-repeat: no-repeat;
                 background-size: contain;
                 background-position: left bottom;
-                transform: translateY(-550px);
+                transform: translateY(-500px);
             }
         }
     }
