--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -405,10 +405,28 @@ main {
             position: relative;
             max-width: 100%;
 
-            img {
-                width: 100%;
-                height: 900px;
-                object-fit: cover;
+
+        }
+
+        .banner-content {
+            width: 100%;
+            height: 900px;
+            object-fit: cover;
+
+            .container{
+                padding: 200px 0 0 0;
+                color: #fff;
+
+                h1{
+                    font-size: 55px;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    width: 60%;
+                }
+
+                p{
+                    font-size: 32px;
+                }
             }
         }
 
