--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -73,9 +73,14 @@ header {
 
     &.navbar {
 
+        .navbar-toggler{
+            border: 1px solid #ccc;
+        }
+
         .navbar-toggler-icon {
             width: 1em;
             height: 1em;
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
         }
 
         @media(min-height: 992px) {
@@ -90,7 +95,7 @@ header {
             }
 
             @media(max-width: 768px) and (min-width: 576px) {
-                height: 120px;
+                height: 115px;
             }
 
             @media(max-width: 576px) {
@@ -127,7 +132,9 @@ header {
                     .nav-link {
                         border-right: 1.5px solid #fff;
                         padding: 0px 8px;
-                        color: #fff !important;
+                        @media (min-width: 991px) {
+                            color: #fff !important;
+                        }
 
                         &:hover {
                             color: #137db8;
@@ -196,10 +203,9 @@ header {
 
             @media (max-width: 992px) {
                 border: none;
-                font-size: 16pt;
+                font-size: 14pt;
                 line-height: 16px;
-                padding: 5px;
-                margin: 10px 5px;
+                margin: 10px 0px;
             }
         }
 
@@ -237,6 +243,18 @@ header {
             .material-icons {
                 font-size: 18pt;
                 vertical-align: middle;
+                @media(max-width: 991px){
+                    color: #333;
+                    margin-left: 5px;
+                }
+            }
+
+            .lang_switch_text{
+                display: none;
+                color: #333;
+                @media (max-width: 991px) {
+                    display: inline-block;
+                }
             }
 
             div::after {
@@ -292,6 +310,11 @@ footer {
     height: 215px;
     padding: 20px 0;
 
+    @media (max-width: 991px) {
+        max-height: 270px;
+        height: 270px;
+    }
+
     img.logo{
         width: 100%;
     }
@@ -305,7 +328,7 @@ footer {
         }
 
         @media (max-width: 992px) {
-            margin-top: 30px;
+            margin-top: 10px;
         }
     }
 
@@ -319,6 +342,10 @@ footer {
         .material-icons {
             font-size: 14px;
             margin-right: 5px;
+        }
+
+        @media (max-width: 992px) {
+            padding-left: 0px;
         }
 
     }
@@ -338,6 +365,15 @@ footer {
         img {
             height: 40px;
             padding: 0 10px;
+
+            @media (max-width: 991px) {
+                height: 20px;
+            }
+
+            @media (max-width: 1280px) {
+                height: 30px;
+
+            }
         }
     }
 
@@ -411,7 +447,9 @@ main {
         .banner-content {
             width: 100%;
             height: 900px;
-            object-fit: cover;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
 
             .container{
                 padding: 200px 0 0 0;
@@ -422,10 +460,25 @@ main {
                     text-transform: uppercase;
                     font-weight: 600;
                     width: 60%;
+                    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
                 }
 
                 p{
                     font-size: 32px;
+                    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+                }
+            }
+
+            @media (max-width: 991px) {
+
+                height: 700px;
+
+
+                .container{
+                    h1, p{
+                        width: 100%;
+                        padding: 0 20px;
+                    }
                 }
             }
         }
@@ -444,7 +497,9 @@ main {
 
                 p {
                     font-weight: 300;
-                    word-break: break-all;
+                    word-break: break-word;
+                    white-space: normal;
+                    overflow-wrap: break-word;
                 }
 
                 img {
@@ -604,6 +659,12 @@ main {
                 background-size: contain;
                 background-position: right bottom;
             }
+
+            @media (max-width: 991px) {
+                #company_info_right_shape {
+                    display: none;
+                }
+            }
         }
 
         #csr_green {
@@ -619,7 +680,7 @@ main {
 
             @media (max-width: 768px) {
                 background-position: center left;
-                height: 520px;
+                height: 600px;
             }
 
             h3 {
@@ -659,6 +720,11 @@ main {
             margin-bottom: 300px;
             font-size: 20px;
 
+            @media(max-width: 991px){
+                margin-bottom: 150px;
+
+            }
+
             h3 {
                 color: #274e80;
             }
@@ -679,6 +745,10 @@ main {
                 background-size: contain;
                 background-position: left bottom;
                 transform: translateY(-500px);
+
+                @media (max-width: 768px) {
+                    transform: translateY(-650px);
+                }
             }
         }
     }
