--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -760,6 +760,43 @@ main {
     &#company,
     &#applied,
     &#contact {
+
+        #mid_right_shape {
+            position: absolute;
+            height: 250px;
+            width: 180px;
+            right: 0px;
+            top: 1500px;
+            opacity: 0.7;
+            z-index: 0;
+            background-image: url('../assets/img/right_double_shape.webp');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: right bottom;
+
+            @media (max-width: 991px) {
+                display: none;
+            }
+        }
+
+
+        #bottom_left_shape {
+            position: absolute;
+            height: 850px;
+            width: 340px;
+            opacity: 0.7;
+            z-index: 0;
+            background-image: url('../assets/img/home_left_bottom_shape.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: left bottom;
+            transform: translateY(-650px);
+
+            @media (max-width: 991px) {
+                display: none;
+            }
+        }
+
         .banner {
             margin: 131px auto 0 auto;
             position: relative;
@@ -928,13 +965,17 @@ main {
                 }
             }
 
+            #quality-lab{
+                margin-bottom: 100px;
+            }
+
             p {
                 font-size: 16px;
                 color: #696969;
                 line-height: 30px;
             }
 
-            h3{
+            h3, h5{
                 color: #274e80;
                 margin-bottom: 10px;
             }
