--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -871,6 +871,7 @@ main {
 
         #productMenu,
         #companyMenu,
+        #techMenu,
         #appliedMenu {
             .title {
                 a {
@@ -883,6 +884,7 @@ main {
 
             #productMenu,
             #companyMenu,
+            #techMenu,
             #appliedMenu {
                 display: block !important;
                 height: auto !important;
@@ -892,6 +894,7 @@ main {
 
             #productMenuBtn,
             #companyMenuBtn,
+            #techMenuBtn,
             #appliedMenuBtn {
                 display: none;
             }
@@ -1011,6 +1014,22 @@ main {
                     }
                 }
             }
+
+        }
+
+        #tech_content {
+
+            h4{
+                color: #274e80;
+            }
+
+            h5.sub-heading{
+                border-bottom: 2px solid #ddd;
+                color: #666;
+                padding-bottom: 10px;
+            }
+
+
 
         }
 
