--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -767,6 +767,7 @@ main {
     &#company,
     &#applied,
     &#tech,
+    &#equip,
     &#contact {
 
         #mid_right_shape {
@@ -1367,7 +1368,45 @@ main {
         }
     }
 
-    &#tech {
+    &#tech{
+        #mid_right_shape {
+            position: absolute;
+            height: 250px;
+            width: 180px;
+            right: 0px;
+            top: 800px;
+            opacity: 0.7;
+            z-index: 0;
+            background-image: url('../assets/img/right_double_shape.webp');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: right bottom;
+
+            @media (max-width: 991px) {
+                display: none;
+            }
+        }
+
+
+        #bottom_left_shape {
+            position: absolute;
+            height: 850px;
+            width: 240px;
+            opacity: 0.7;
+            z-index: 0;
+            background-image: url('../assets/img/home_left_bottom_shape.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: left bottom;
+            transform: translateY(-650px);
+
+            @media (max-width: 991px) {
+                display: none;
+            }
+        }
+    }
+
+    &#equip {
         .clickable-image {
             cursor: pointer;
           }
