--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1403,19 +1403,23 @@ main {
             background-position: left bottom;
             transform: translateY(-650px);
 
-            @media (max-width: 991px) {
+            @media (max-width: 1280px) {
                 display: none;
             }
         }
 
         .contact_bottom{
-            height: 865px;
+            height: 660px;
             width: 100%;
             background-image: url('../assets/img/contact_bottom.webp');
             background-repeat: no-repeat;
             background-size: contain;
-            background-position: right center;
-            margin-top: -100px;
+            background-position: right bottom;
+
+            @media (min-width: 1650px) {
+                height: 700px;
+                background-size: contain;
+            }
 
             @media (max-width: 991px) {
                 height: 480px;
