[modify] update dists

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1477,9 +1477,10 @@ main {
                 opacity: 0;
               }
 
-              img {
-                transform: scale(1.1);
-              }
+
+            //   img {
+            //     transform: scale(1.1);
+            //   }
             }
           }
           
