--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1462,7 +1462,7 @@ main {
               height: 100%;
               opacity: 1;
               background-color: rgba(39, 78, 128, 0.5);
-              transition: opacity 0.3s ease;
+              transition: opacity 0.3s ease 0.3s;
             }
 
             img {
@@ -1478,9 +1478,9 @@ main {
               }
 
 
-            //   img {
-            //     transform: scale(1.1);
-            //   }
+              img {
+                transform: scale(1.1);
+              }
             }
           }
           
