--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -819,7 +819,7 @@ main {
             z-index: -1;
             background-size: cover;
             background-position: top center;
-            height: 528px;
+            height: 450px;
 
             @media (max-width: 1280px) {
                 height: 350px;
@@ -951,15 +951,16 @@ main {
                     line-height: 25px;
 
                     a[data-bs-toggle=collapse] {
+                        font-weight: 600;
                         text-decoration: none;
                         color: #696969;
 
                         &[aria-expanded=false]::before {
-                            content: '▸';
+                            content: '▸ ';
                         }
 
                         &[aria-expanded=true]::before {
-                            content: '▾';
+                            content: '▾ ';
                         }
 
                         &:hover {
@@ -1121,6 +1122,30 @@ main {
                 border-bottom: 2px solid #ddd;
                 color: #666;
                 padding-bottom: 10px;
+            }
+        }
+
+        #product_content {
+            z-index: 1;
+
+
+            h4 {
+                color: #274e80;
+            }
+
+            h5.sub-heading {
+                border-bottom: 2px solid #ddd;
+                color: #666;
+                padding-bottom: 10px;
+            }
+
+            .product_badge{
+                padding: 5px 0;
+                background-color: #5d7b97;
+                border-radius: 5px;
+                width: 150px;
+                text-align: center;
+                color: #fff;
             }
         }
 
